Map implemented in android

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticeWS"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA0F-C81PsElR841gtFSSIktx0H2FrVXU8" />
+
         <activity
-            android:name=".Activity.MapActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+            android:name=".Activity.MapsActivity"
+            android:exported="false"
+            android:theme="@style/MyTheme"
+            android:label="@string/title_activity_maps" />
         <activity
             android:name=".Activity.DataPassingInFragActivity"
             android:exported="false"
