--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,11 @@ dependencies {
 
     //Responsive size
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
+
+//    //Fast Networking API
+//    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+
+    //Volley API calling
+    implementation 'com.android.volley:volley:1.2.1'
+
 }
