Learn Api calling through Retrofit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,9 @@ dependencies {
 
     //get current location
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    //retrofit API
+    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
